sass/_layout.sass
@use "_base" as *

html
  scroll-behavior: smooth

body
  min-height: 100vh
  margin: 0
  display: flex
  flex-direction: column

.content
  flex: 1 0 auto

main
  max-width: var(--max-one-col-width)
  width: 90%
  margin: auto

footer
  margin-top: 2em
  padding: 1.5em 0
  flex-shrink: 0

  div.footer-inner
    max-width: var(--max-two-col-width)
    width: 90%
    margin: auto

// offset anchors
:target:before
  content: ""
  display: block
  height: calc(1em * 2 + 1.1em)
  margin: calc(-1em * 2 - 1.1em) 0 0 0

img
  max-width: 100%

hr
  border: none
  border-top: 2px solid var(--heading-color)
  margin: 3em 6em

.youtube-embed
  position: relative
  width: 100%
  height: 0
  padding-bottom: 56.25%
  overflow: hidden

  iframe
    position: absolute
    top: 0
    left: 0
    width: 100%
    height: 100%

